# book-recommendation-platform

./: .dockerignore  .gitignore  README.md  cron_pipeline.txt  enrichment_report_v2_20251102_054527.html  enrichment_report_v2_20251102_062818.html  env.yml  environment.yml  gunicorn.conf.py  gunicorn_model_server.conf.py  main.py  metrics.py  pyproject.toml  refactor.txt  requirements.txt  security_settings.py  test.py  tree.py  xcopy
app/: auth.py  database.py  models.py  search_engine.py  table_models.py
data/: add_ontology_version.sql  add_tags_version_to_links.sql  create_tables.py  import_books_sql.py  import_csvs.py  import_main_subject.py  import_ratings_sql.py  import_users_sql.py  migrate_enrichment_errors.py  ol2viaf_subset.csv  seed_ontologies.py  update_staging_tables_versioned.sql  users.csv  users_to_subjects.csv
deploy/: cd.sh  deploy.env.example  install.sh
docs/: big_data_patterns.txt  chatbot.txt  data_enrichment.txt  desing_patterns.txt  enrichment-pipeline_improvement.txt  recsys_agent.txt
frontend/: book.html  chat.html  home.html  index.html  login.html  package-lock.json  package.json  profile.html  signup.html  vite.config.ts
model_notebooks/: goodreads-model.ipynb
models/: bayesian_tensor.npy  book_als_ids.json  book_ids.json  book_model.py  book_similarity_engine.py  candidate_generators.py  cold_user_recs.py  dls.pkl  engines_reload.py  gbt_cold.pickle  knn_index.py  knn_utils.py  recommendation_engine.py  recommender_strategy.py  rerankers.py  shared_utils.py  subject_attention_components.pth  subject_attention_strategy.py  (+5 more)
(+617 files in other folders)
